Fire visualViewport resize event when browser zoomed

BUG=636421

Review-Url: https://codereview.chromium.org/2249483002
Cr-Commit-Position: refs/heads/master@{#417632}

Former-commit-id: 2ad494069b0447cc2d32c844ce6eb991cc129bd1